KPMP-3583: Fix table overflow on sc/sn table

--- a/src/index.scss
+++ b/src/index.scss
@@ -268,7 +268,8 @@ tr.MuiTableRow-root:nth-child(even) {
   background-color: #cee5ff;
 }
 
-.cluster_v_others_container {
+.cluster_v_others_container,
+.gene-summary-header {
   padding: 5px;
   background-color: #cee5ff !important;
 }
